# flowpro

./: .gitignore  README.md  pyproject.toml  requirements-robot.txt  requirements.txt
configs/: flowpro.absolute-rl.json  flowpro.absolute.centrifuge.json  flowpro.absolute.json  flowpro.delta.json  flowpro.json
scripts/: 00_validate.py  00_validate.sh  01_pretrain.py  01_pretrain.sh  02_inference.py  02_inference.sh  03_collect_preferences.py  03_collect_preferences.sh  04_augment_preferences.py  04_augment_preferences.sh  05_offline_rl.py  05_offline_rl.sh  06_run_round.py  06_run_round.sh  07_run_pipeline.py  07_run_pipeline.sh  _common.py  _common.sh  quest_webxr.sh  setup_quest_adb.sh
src/astribot_env/: __init__.py  initial_pose.py  manual_control.py  quest_intervention.py  quest_takeover.py  rgbd.py  sdk_loader.py  utils.py  wam4d_policy.py
src/astribot_env/envs/: __init__.py  astribot_wam4d_residual_env.py
src/flowpro/: __init__.py  config.py  validate.py  workflow.py
src/flowpro/augmentation/: __init__.py  interpolation.py
src/flowpro/cli/: augment.py  collect.py  offline_rl.py  train.py
src/flowpro/collection/: __init__.py  astribot_runtime.py  controller.py  execution_worker.py  inference_worker.py  protocol.py  rollback.py
src/flowpro/data/: __init__.py  store.py  types.py
src/flowpro/inference/: __init__.py  action_representation.py
src/flowpro/training/: __init__.py  (+3 more)
src/wan_va/: __init__.py  action_representation.py  train.py  wan_va_server.py
tests/: test_augmentation.py  test_collection.py  test_config.py  test_delta_eef.py  test_initial_pose.py  test_preference_io.py  test_rgbd_sync.py  test_streaming_store.py  test_training.py  test_websocket_client.py
tools/: joy_tools.py
(+59 files in other folders)
