[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flowpro"
version = "0.1.0"
description = "Independent FlowPRO data collection and offline RPRO training loop"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
train = ["torch==2.9.0", "torchvision==0.24.0", "diffusers", "transformers", "accelerate",
         "einops", "easydict", "tqdm", "imageio[ffmpeg]", "safetensors", "wandb"]
robot = ["requests>=2.31", "websockets>=12", "msgpack", "opencv-python", "pillow>=10"]
test = ["pytest>=7"]

[project.scripts]
flowpro-collect = "flowpro.cli.collect:main"
flowpro-train = "flowpro.cli.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
